working on user routes
