# routes/usersRoute.js
@@ -5,14 +5,14 @@ const usersController = require('../controllers/usersController');
 
 router.get('/', usersController.getAllUsers);
 
-router.get('/:userName', usersController.getUserByName);
+router.get('/:email', usersController.getUserByEmail);
 
 // router.get('/:tags', usersController.getUserByName)
 
 router.post('/', usersController.createNewUser);
 
-router.put('/:userName', usersController.updateUser);
+router.put('/:email', usersController.updateUser);
 
-router.delete('/:userName', usersController.deleteUser);
+router.delete('/:email', usersController.deleteUser);
 
 module.exports = router;
