# swagger.json
@@ -5,10 +5,10 @@
     "description": "Recipes project using an API",
     "version": "1.0.0"
   },
-  "host": "recipe-book-project.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/recipes/": {
@@ -205,12 +205,12 @@
         }
       }
     },
-    "/users/{userName}": {
+    "/users/{email}": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "userName",
+            "name": "email",
             "in": "path",
             "required": true,
             "type": "string"
@@ -232,7 +232,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "userName",
+            "name": "email",
             "in": "path",
             "required": true,
             "type": "string"
@@ -246,10 +246,22 @@
                 "password": {
                   "example": "any"
                 },
-                "userName": {
+                "identifier": {
                   "example": "any"
                 },
                 "email": {
+                  "example": "any"
+                },
+                "givenName": {
+                  "example": "any"
+                },
+                "familyName": {
+                  "example": "any"
+                },
+                "locale": {
+                  "example": "any"
+                },
+                "picture": {
                   "example": "any"
                 }
               }
@@ -272,7 +284,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "userName",
+            "name": "email",
             "in": "path",
             "required": true,
             "type": "string"
